load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "main_lib",
    srcs = ["src/main/index.ts"],
    declaration = True,
    transpiler = swc,
    tsconfig = ":tsconfig.node.json",
)

ts_project(
    name = "preload_lib",
    srcs = ["src/preload/index.ts"],
    declaration = True,
    transpiler = swc,
    tsconfig = ":tsconfig.node.json",
)

ts_project(
    name = "renderer_lib",
    srcs = [
        "src/renderer/App.tsx",
        "src/renderer/main.tsx",
    ],
    declaration = True,
    transpiler = swc,
    tsconfig = ":tsconfig.json",
)

js_binary(
    name = "renderer_bundle",
    data = [":renderer_lib"],
    entry_point = "src/renderer/main.js",
)
