load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "dominion/tools/deploy/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/deploy/pkg/config",
        "//tools/deploy/pkg/env",
        "//tools/deploy/pkg/k8s",
        "//tools/deploy/pkg/workspace",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["main_test.go"],
    embed = [":cmd_lib"],
    deps = ["//tools/deploy/pkg/k8s"],
)
